# rvariant

./: Cargo.toml  README.md
src/: lib.rs  number.rs  util.rs
